--- a/config/apis.properties
+++ b/config/apis.properties
@@ -1,3 +1,4 @@
 # Development API
 DEVELOPMENT_WEATHER_API_HOST=api.openweathermap.org
 DEVELOPMENT_WEATHER_API_PREFIX_PATH=
+DEVELOPMENT_WEATHER_API_KEY=c1e401085a544beff6018194d3d5315c
